--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -219,7 +219,7 @@
         </div>
         <div class="row">
             <div class="col-9"></div>
-            <div class="col-3">
+            <div class="col-3" th:hidden="${request.endDate!=null}">
                 <button type="reset" class="btn btn-secondary">Отменить</button>
                 <button type="submit" class="btn btn-primary">Сохранить</button>
             </div>
