Add filtering by inNumberFromOrg

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -135,6 +135,14 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="col-2"></div>
+                                <div class="col-5">
+                                    <div class="form-group">
+                                        <label for="formInNumberFromOrg">Входящий № орг.</label>
+                                        <input class="form-control" type="text" id="formInNumberFromOrg" name="inNumFromOrg"
+                                               th:value="${filter.getInNumFromOrg()}">
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
