--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,6 +35,9 @@
                         <a class="dropdown-item" href="/requests">Отменить</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/unload">Выгрузка</a>
+                </li>
             </ul>
 
         </div>
