--- a/src/main/resources/templates/unload.html
+++ b/src/main/resources/templates/unload.html
@@ -2,31 +2,115 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: head"></head>
 <body>
-</br>
+<br>
 <div class="container">
-<form th:action="@{/unload}"
-      th:object="${unloadFilter}"
-      method="POST">
-    <p>
-    <div class="input-group">
-        <input type="text" class="form-control" id="rubricCode" name="rubricCode" th:value="*{rubricCode}"
-               placeholder="Рубрика"/>
-        <input type="text" class="form-control" id="sourceId" name="sourceId" th:value="*{sourceId}"
-               placeholder="Тип отправления"/>
-        <div class="input-group-prepend">
-            <span class="input-group-text">Дата</span>
-        </div>
-        <input type="date" class="form-control" id="dateFrom" name="dateFrom" th:value="*{date}"/>
+    <!-- Не дает отправлять POST запрос при обновлении страницы -->
+    <script>
+        if (window.history.replaceState) {
+            window.history.replaceState(null, null, window.location.href);
+        }
+    </script>
+
+    <div th:if="${countOfRecords}"
+         class="alert alert-success" role="alert">
+        <h4 class="alert-heading" th:utext="'Всего: ' + ${countOfRecords}"></h4>
+        <table>
+            <thead>
+            <tr>
+                <th>Рубрики</th>
+                <th>Копий</th>
+                <th>Кол-во</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="unloadModel : ${unloadModels}">
+                <td th:utext="${unloadModel.getRubricCode()}">...</td>
+                <td th:utext="${unloadModel.getCopyNumber()}">...</td>
+                <td th:utext="${unloadModel.getCountOfRequests()}">...</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    </p>
 
-    <p>
-        <input type="submit" class="btn btn-primary" value="Посчитать">
-    </p>
-</form>
+    <div th:if="${errorMessage}"
+         th:utext="${errorMessage}"
+         class="alert alert-danger" role="alert">
+        ...
+    </div>
 
-<h4 th:utext="${countOfRecords}"></h4>
-
+    <form th:action="@{/unload}"
+          th:object="${unloadFilter}"
+          method="POST">
+        <div class="input-group">
+            <div class="form-group">
+                <label for="formSourceSelect">Тип отправления</label>
+                <select class="form-control" id="formSourceSelect" name="sourceId">
+                    <option>[Не выбрано]</option>
+                    <option th:each="source : ${sources}"
+                            th:value="${source.getId()}"
+                            th:text="${source.getName()}"
+                            th:selected="${unloadFilter.getSourceId() == source.getId()}">
+                        Default select
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="formExecutorSelect">Исполнитель</label>
+                <select class="form-control" id="formExecutorSelect" name="executorId">
+                    <option>[Не выбрано]</option>
+                    <option th:each="executor : ${executors}"
+                            th:value="${executor.getId()}"
+                            th:text="${executor.getName()}"
+                            th:selected="${unloadFilter.getExecutorId() == executor.getId()}">
+                        Default select
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="entity">Юр. лицо</label>
+                <select class="form-control" id="entity" name="isEntity">
+                    <option>[Не выбрано]</option>
+                    <option>Да</option>
+                    <option>Нет</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="dateFrom">С какого</label>
+                <input type="date" class="form-control" id="dateFrom" name="dateFrom" th:value="*{dateFrom}"/>
+            </div>
+            <div class="form-group">
+                <label for="dateTo">По какое</label>
+                <input type="date" class="form-control" id="dateTo" name="dateTo" th:value="*{dateTo}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <table>
+                <thead>
+                <tr>
+                    <th>Рубрики</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="rubric : ${rubrics}">
+                    <td>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="rubrics"
+                                   th:value="${rubric.getRubric()}"
+                                   th:id="${rubric.getRubric()}"/>
+                            <label class="form-check-label"
+                                   th:for="${rubric.getRubric()}"
+                                   th:text="${rubric.getRubric()} + ' ' + ${rubric.getName()}"></label>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <p>
+            <input type="submit" class="btn btn-primary" value="Посчитать">
+            <a class="btn btn-secondary" href="/requests" role="button">Назад</a>
+        </p>
+    </form>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
