--- a/src/main/resources/templates/unload.html
+++ b/src/main/resources/templates/unload.html
@@ -14,7 +14,7 @@
     <div th:if="${unloadModels}"
          class="alert alert-success" role="alert">
         <h4 class="alert-heading" th:utext="'Всего: ' + ${countOfRecords}"></h4>
-        <table>
+        <table style="width: 50%">
             <thead>
             <tr>
                 <th>Рубрики</th>
@@ -42,18 +42,6 @@
           th:object="${unloadFilter}"
           method="POST">
         <div class="input-group">
-            <div class="form-group">
-                <label for="formSourceSelect">Тип отправления</label>
-                <select class="form-control" id="formSourceSelect" name="sourceId">
-                    <option th:value="0">[Не выбрано]</option>
-                    <option th:each="source : ${sources}"
-                            th:value="${source.getId()}"
-                            th:text="${source.getName()}"
-                            th:selected="${unloadFilter.getSourceId() == source.getId()}">
-                        Default select
-                    </option>
-                </select>
-            </div>
             <div class="form-group">
                 <label for="formExecutorSelect">Исполнитель</label>
                 <select class="form-control" id="formExecutorSelect" name="executorId">
@@ -97,7 +85,7 @@
                     checkboxes[i].checked = true;
                 }
             }
-            
+
             function uncheckAll() {
                 let checkboxes = document.querySelectorAll('input[type="checkbox"]');
                 for (let i = 0; i < checkboxes.length; i++) {
@@ -110,7 +98,8 @@
 
 
         <div class="form-group">
-            <table>
+
+            <table style="display: inline;">
                 <thead>
                 <tr>
                     <th>Рубрики</th>
@@ -127,6 +116,28 @@
                             <label class="form-check-label"
                                    th:for="${rubric.getRubric()}"
                                    th:text="${rubric.getRubric()} + ' ' + ${rubric.getName()}"></label>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <table style="display: inline;">
+                <thead>
+                <tr>
+                    <th>Тип отправления</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="source : ${sources}">
+                    <td>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="sourceIds"
+                                   th:value="${source.getId()}"
+                                   th:id="${source.getId()}"
+                                   th:checked="${unloadFilter.isCheckedSource(source.getId())}"/>
+                            <label class="form-check-label"
+                                   th:for="${source.getId()}"
+                                   th:text="${source.getName()}"></label>
                         </div>
                     </td>
                 </tr>
