--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head :: head"></head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div th:replace="fragments/requestBody :: requestBody"></div>
+<div th:replace="fragments/request_body :: requestBody"></div>
 <div th:replace="fragments/pager :: pager"></div>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
