--- a/src/main/resources/templates/unload.html
+++ b/src/main/resources/templates/unload.html
@@ -18,8 +18,8 @@
             <thead>
             <tr>
                 <th>Рубрики</th>
-                <th>Копий</th>
-                <th>Кол-во</th>
+                <th>Кол-во листов</th>
+                <th>Кол-во запросов</th>
             </tr>
             </thead>
             <tbody>
