added filtering by initiator and letter printing

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -156,6 +156,16 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label for="formInNumberFromOrg">Инициатор</label>
+                                        <input class="form-control" type="text" id="initiator"
+                                               name="initiator"
+                                               th:value="${filter.getInitiator()}">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="modal-footer">
