--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -6,5 +6,13 @@
 <div th:replace="fragments/request_body :: requestBody"></div>
 <div th:replace="fragments/pager :: pager"></div>
 <div th:replace="fragments/footer :: footer"></div>
+<script th:inline="javascript">
+    $(document).ready(function () {
+        var action = /*[[${action}]]*/ "";
+        if (action === 'save') {
+            alert('Изменения сохранены')
+        }
+    });
+</script>
 </body>
 </html>
