--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,5 +6,7 @@
     <script type = "text/javascript" src="/js/jquery-3.3.1.slim.min.js"></script>
     <script type = "text/javascript" src="/js/popper.min.js"></script>
     <script type = "text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type = "text/javascript" src="/js/polyfiller.js"></script>
+    <script type = "text/javascript" src="/js/bootstrap-datepicker.js"></script>
 </div>
 </html>
